--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,6 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-
 .post-view-image{
 	height: 80px;
+}
+html, body, body > .column{
+	height: 100%;
 }
